# Aegeanbench

./: README.md  pyproject.toml  requirements.txt
aegeanbench/: __init__.py  __main__.py  cli.py
aegeanbench/core/: __init__.py  models.py
aegeanbench/datasets/: __init__.py  collaboration_cases.py  consensus_cases.py  risk_cases.py
aegeanbench/metrics/: __init__.py  engine.py
aegeanbench/runners/: __init__.py  _mock_llm_agent.py  aegean_runner.py  http_runner.py  mock_runner.py
configs/: default.yaml
tests/: test_benchmark.py
ui/: app.js  app_part2.js  index.html  style.css
